[tool.poetry]
name = "LightAgents"
version = "0.1.0"
description = ""
authors = ["Zain ul Abideen","Adeel Ahmed Qureshi"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastembed = {version = "^0.3.4", python = ">=3.11,<3.13"}
ollama = "^0.2.1"
pydantic = "^2.8.2"
openai = "^1.35.14"
instructor = "^1.3.5"
mem0ai = "^0.0.9"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
transformers = "^4.43.2"
huggingface-hub = "^0.24.2"
poppler-utils = "^0.1.0"
pymupdf = "^1.24.9"
fonttools = "^4.53.1"
pymupdf-fonts = "^1.0.5"
pymupdf4llm = "^0.0.10"
semantic-text-splitter = "^0.14.1"
sentence-transformers = "^3.0.1"
numpy = "<2.0"
arxiv = "^2.1.3"
braintrust = "^0.0.150"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
